docs: 更新开发计划文档
- index: 添加 SSE 协议变更记录
- 阶段3: 更新数据模型任务清单
- 阶段5: 更新 Agent 编排任务
- 阶段7: 更新前端开发任务

--- a/docs/plan/阶段3-数据模型实现.md
+++ b/docs/plan/阶段3-数据模型实现.md
@@ -2,7 +2,7 @@
 
 ## 状态
 
-⚪ 待开始
+🟡 进行中 (30%)
 
 ## 目标
 
@@ -42,10 +42,14 @@
 
 ### 枚举类型
 
-- [ ] 定义 Weather 枚举
-- [ ] 定义 UserMood 枚举
-- [ ] 定义 TimeOfDay 枚举
-- [ ] 定义 RouteType 枚举
+- [x] 定义 GpsTag 枚举 ✅
+- [x] 定义 Weather 枚举 ✅
+- [x] 定义 UserMood 枚举 ✅
+- [x] 定义 TimeOfDay 枚举 ✅
+- [x] 定义 RouteType 枚举 ✅
+- [x] 定义 SafetyMode 枚举 ✅
+- [x] 定义 LightMode 枚举 ✅
+- [x] 定义 NarrativeEmotion 枚举 ✅
 
 ### 验证与测试
 
