--- a/docs/plan/阶段7-前端开发.md
+++ b/docs/plan/阶段7-前端开发.md
@@ -66,7 +66,7 @@
 - [ ] 封装 API 调用服务
 - [ ] 实现状态管理（React Context / Zustand）
 - [ ] 处理加载状态和错误状态
-- [ ] WebSocket 连接（可选）
+- [ ] SSE 订阅（`/api/vibe/events`，可选）
 
 ### 演示模式
 
