docs: 更新阶段3进度至90%

--- a/docs/plan/阶段3-数据模型实现.md
+++ b/docs/plan/阶段3-数据模型实现.md
@@ -2,7 +2,7 @@
 
 ## 状态
 
-🟡 进行中 (30%)
+🟡 进行中 (90%)
 
 ## 目标
 
@@ -17,39 +17,61 @@
 
 ## 任务清单
 
-### Environment 模型
+### 枚举类型（10个）
 
-- [ ] 定义 Environment 类/Record
-  - `gpsTag`: 地理标签（高架桥、隧道、郊区公路等）
-  - `weather`: 天气（晴/阴/雨/雪/雾）
-  - `speed`: 车速（0-200 km/h）
-  - `userMood`: 用户情绪（happy/calm/tired/stressed/excited）
-  - `timeOfDay`: 时段（dawn/morning/noon/afternoon/evening/night/midnight）
-  - `passengerCount`: 乘客数量（1-7）
-  - `routeType`: 路线类型（highway/urban/mountain/coastal/tunnel）
-- [ ] 编写 JSON Schema 文档
-- [ ] 实现 JSON 序列化/反序列化
+- [x] GpsTag 枚举 ✅
+- [x] Weather 枚举 ✅
+- [x] UserMood 枚举 ✅
+- [x] TimeOfDay 枚举 ✅
+- [x] RouteType 枚举 ✅
+- [x] SafetyMode 枚举 ✅
+- [x] LightMode 枚举 ✅
+- [x] NarrativeEmotion 枚举 ✅
+- [x] AnalyzeAction 枚举 ✅ (新增)
+- [x] NotificationType 枚举 ✅ (新增)
+- [x] 枚举 JSON 序列化修复（@JsonValue/@JsonCreator）✅
 
-### AmbiencePlan 模型
+### 核心数据模型（11个）
 
-- [ ] 定义 AmbiencePlan 类/Record
-  - `musicRecommendation`: 音乐推荐（歌曲列表、BPM、流派）
-  - `lightSetting`: 灯光设置（色温、颜色、亮度）
-  - `narrative`: 串词文本
-  - `scentSetting`: 香氛设置（类型、浓度）
-  - `seatSetting`: 座椅设置（按摩模式、强度）
-- [ ] 定义子模型（MusicRecommendation、LightSetting 等）
+- [x] Environment Record ✅
+- [x] AmbiencePlan Record ✅
+- [x] MusicRecommendation Record ✅
+- [x] LightSetting Record ✅
+- [x] Narrative Record ✅
+- [x] Song Record ✅
+- [x] BpmRange Record ✅
+- [x] LightColor Record ✅
+- [x] ZoneSetting Record ✅
+- [x] TokenUsageInfo Record ✅
+- [x] ToolExecutionInfo Record ✅
 
-### 枚举类型
+### API 模型（3个）
 
-- [x] 定义 GpsTag 枚举 ✅
-- [x] 定义 Weather 枚举 ✅
-- [x] 定义 UserMood 枚举 ✅
-- [x] 定义 TimeOfDay 枚举 ✅
-- [x] 定义 RouteType 枚举 ✅
-- [x] 定义 SafetyMode 枚举 ✅
-- [x] 定义 LightMode 枚举 ✅
-- [x] 定义 NarrativeEmotion 枚举 ✅
+- [x] ApiResponse Record ✅
+- [x] AnalyzeRequest Record ✅
+- [x] AnalyzeResponse Record ✅
+
+### Agent 状态模型（3个）
+
+- [x] VibeAgentStatus Record ✅
+- [x] VibeNotification Record ✅
+- [x] VibeCommand Sealed Interface ✅
+
+### SSE 事件模型（9个）
+
+- [x] TokenEvent ✅
+- [x] ToolStartEvent ✅
+- [x] ToolEndEvent ✅
+- [x] ErrorEvent ✅
+- [x] HeartbeatEvent ✅
+- [x] AmbienceChangedEvent ✅
+- [x] SafetyModeChangedEvent ✅
+- [x] AgentStatusChangedEvent ✅
+- [x] EnvironmentUpdateEvent ✅
+
+### JSON 序列化配置
+
+- [x] Jackson 配置禁用 getter 自动检测 ✅
 
 ### 验证与测试
 
@@ -60,23 +82,70 @@
 
 ```
 src/main/java/com/vibe/model/
-├── Environment.java
-├── AmbiencePlan.java
-├── MusicRecommendation.java
-├── LightSetting.java
-├── enums/
+├── enums/                    # 枚举（10个）
+│   ├── GpsTag.java
 │   ├── Weather.java
 │   ├── UserMood.java
 │   ├── TimeOfDay.java
-│   └── RouteType.java
+│   ├── RouteType.java
+│   ├── SafetyMode.java
+│   ├── LightMode.java
+│   ├── NarrativeEmotion.java
+│   ├── AnalyzeAction.java
+│   └── NotificationType.java
+├── api/                      # API 模型（3个）
+│   ├── ApiResponse.java
+│   ├── AnalyzeRequest.java
+│   └── AnalyzeResponse.java
+├── agent/                    # Agent 模型（3个）
+│   ├── VibeAgentStatus.java
+│   ├── VibeNotification.java
+│   └── VibeCommand.java
+├── event/                    # SSE 事件（9个）
+│   ├── TokenEvent.java
+│   ├── ToolStartEvent.java
+│   ├── ToolEndEvent.java
+│   ├── ErrorEvent.java
+│   ├── HeartbeatEvent.java
+│   ├── AmbienceChangedEvent.java
+│   ├── SafetyModeChangedEvent.java
+│   ├── AgentStatusChangedEvent.java
+│   └── EnvironmentUpdateEvent.java
+├── Environment.java          # 核心模型（11个）
+├── AmbiencePlan.java
+├── MusicRecommendation.java
+├── LightSetting.java
+├── Narrative.java
+├── Song.java
+├── BpmRange.java
+├── LightColor.java
+├── ZoneSetting.java
+├── TokenUsageInfo.java
+└── ToolExecutionInfo.java
 ```
 
 ## 完成标准
 
-- [ ] 所有模型类定义完成
-- [ ] JSON 序列化/反序列化测试通过
-- [ ] 代码已提交到 Git
+- [x] 所有模型类定义完成 ✅
+- [x] JSON 序列化配置完成 ✅
+- [x] 代码已提交到 Git ✅
+- [ ] Bean Validation 注解
+- [ ] 单元测试通过
 
 ## 问题与笔记
 
-（开发过程中遇到的问题和解决方案记录在这里）
+### 2025-12-23: JSON 契约修复
+
+**问题**：Codex Review 发现枚举序列化大小写不一致
+- 文档使用小写：`"highway"`, `"rainy"`
+- Java 枚举默认大写：`HIGHWAY`, `RAINY`
+
+**解决方案**：
+1. 所有枚举添加 `@JsonValue` + `@JsonCreator`
+2. Jackson 配置禁用 getter 自动检测
+
+### 统计
+
+- 总文件数：36 个 Java 文件
+- 枚举：10 个
+- Record 类：26 个
