docs: 前端技术栈改为 Vue 3 + TypeScript
- 更新 README.md 和 CLAUDE.md 技术栈说明
- 新增 frontend-architecture.md 前端架构设计文档
- 更新阶段7计划文档，添加架构决策表

--- a/docs/plan/阶段7-前端开发.md
+++ b/docs/plan/阶段7-前端开发.md
@@ -12,17 +12,35 @@
 
 - [x] 阶段 6: API 与 Mock（需要后端 API 可用）
 
+## 架构决策
+
+| 决策项 | 选择 | 说明 |
+|--------|------|------|
+| 框架 | Vue 3 + TypeScript | Composition API + `<script setup>` |
+| 构建工具 | Vite | 快速开发体验 |
+| 3D 可视化 | TresJS | Vue 生态的 Three.js 封装 |
+| UI 组件库 | 无（手写样式） | 完全自定义车载风格 |
+| CSS 方案 | UnoCSS | 原子化 CSS，按需生成 |
+| 状态管理 | Pinia（单 Store） | 简单直接 |
+| SSE 处理 | fetch + ReadableStream | 支持 POST 和自定义 Header |
+| 屏幕比例 | 21:9 | 超宽屏车载屏幕 |
+| 配色风格 | 白色调 + 蓝色强调 | 匹配白色内饰 |
+| 主题模式 | 浅色 + 深色 | 支持夜间模式 |
+| 演示数据 | 后端生成 | 调用 EnvironmentSimulator |
+
+详细设计见：[前端架构设计](../design/frontend-architecture.md)
+
 ## 任务清单
 
 ### 页面布局
 
-- [ ] 设计车载横屏布局（16:9 或 21:9）
-- [ ] 实现响应式适配
+- [ ] 实现 21:9 超宽屏布局
 - [ ] 创建主要区域划分
-  - 左侧：环境信息展示
-  - 中间：氛围可视化（灯光动效）
+  - 左侧：环境信息面板
+  - 中央：氛围可视化（3D）
   - 右侧：音乐播放器 + 串词展示
-  - 底部：Agent 思维链
+  - 底部：Agent 思维链（可折叠）
+- [ ] 实现浅色/深色主题切换
 
 ### 环境信息展示
 
@@ -32,7 +50,7 @@
 - [ ] 用户情绪选择器
 - [ ] 环境数据实时更新
 
-### 氛围灯可视化（Three.js）
+### 氛围灯可视化（TresJS）
 
 - [ ] 创建 3D 场景（模拟车内视角）
 - [ ] 实现氛围灯动效
@@ -64,7 +82,7 @@
 ### API 集成
 
 - [ ] 封装 API 调用服务
-- [ ] 实现状态管理（React Context / Zustand）
+- [ ] 实现状态管理（Pinia）
 - [ ] 处理加载状态和错误状态
 - [ ] SSE 订阅（`/api/vibe/events`，可选）
 
@@ -77,19 +95,39 @@
 ## 相关文件
 
 ```
-vibe-drive-frontend/src/
-├── components/
-│   ├── EnvironmentPanel.tsx      # 环境信息
-│   ├── AmbienceVisualizer.tsx    # 氛围灯 3D 可视化
-│   ├── MusicPlayer.tsx           # 音乐播放器
-│   ├── NarrativeDisplay.tsx      # 串词展示
-│   └── ThinkingChain.tsx         # 思维链展示
-├── services/
-│   └── api.ts                    # API 调用
-├── stores/
-│   └── vibeStore.ts              # 状态管理
-├── App.tsx
-└── main.tsx
+vibe-drive-frontend/
+├── src/
+│   ├── assets/styles/
+│   │   └── theme.css              # 主题变量
+│   ├── components/
+│   │   ├── layout/
+│   │   │   └── AppLayout.vue      # 主布局
+│   │   ├── environment/
+│   │   │   ├── EnvironmentPanel.vue
+│   │   │   └── MoodSelector.vue
+│   │   ├── ambience/
+│   │   │   └── AmbienceVisualizer.vue
+│   │   ├── music/
+│   │   │   └── MusicPlayer.vue
+│   │   ├── narrative/
+│   │   │   └── NarrativeDisplay.vue
+│   │   └── agent/
+│   │       └── ThinkingChain.vue
+│   ├── composables/
+│   │   ├── useSSE.ts              # SSE 连接管理
+│   │   └── useTheme.ts            # 主题切换
+│   ├── services/
+│   │   ├── api.ts                 # API 封装
+│   │   └── types.ts               # API 类型定义
+│   ├── stores/
+│   │   └── vibeStore.ts           # Pinia 状态管理
+│   ├── App.vue
+│   └── main.ts
+├── index.html
+├── package.json
+├── tsconfig.json
+├── vite.config.ts
+└── uno.config.ts                  # UnoCSS 配置
 ```
 
 ## 完成标准
