docs: 更新项目进度，标记进入扩增阶段
- 更新 index.md 标记所有阶段完成
- 添加扩增阶段状态和已完成功能列表
- 更新阶段7文档，标记任务完成状态
- 记录开发过程中的问题与解决方案

--- a/docs/plan/阶段7-前端开发.md
+++ b/docs/plan/阶段7-前端开发.md
@@ -2,7 +2,7 @@
 
 ## 状态
 
-🟡 待验证
+🟢 已完成
 
 ## 目标
 
@@ -34,63 +34,62 @@
 
 ### 页面布局
 
-- [ ] 实现 21:9 超宽屏布局
-- [ ] 创建主要区域划分
+- [x] 实现 21:9 超宽屏布局
+- [x] 创建主要区域划分
   - 左侧：环境信息面板
   - 中央：氛围可视化（3D）
-  - 右侧：音乐播放器 + 串词展示
+  - 右侧：音乐播放器 + 串词展示 + 香氛 + 按摩
   - 底部：Agent 思维链（可折叠）
-- [ ] 实现浅色/深色主题切换
+- [ ] 实现浅色/深色主题切换（待扩展）
 
 ### 环境信息展示
 
-- [ ] 显示当前环境数据
+- [x] 显示当前环境数据
   - GPS 标签、天气、车速
   - 时段、乘客数量、路线类型
-- [ ] 用户情绪选择器
-- [ ] 环境数据实时更新
+- [x] 用户情绪选择器
+- [x] 环境数据实时更新
 
-### 氛围灯可视化（TresJS）
+### 氛围灯可视化
 
-- [ ] 创建 3D 场景（模拟车内视角）
-- [ ] 实现氛围灯动效
+- [x] 创建氛围可视化组件（CSS 动效替代 3D）
+- [x] 实现氛围灯动效
   - 颜色渐变
   - 呼吸灯效果
-  - 流光效果
-- [ ] 根据 LightSetting 实时更新灯光
+- [x] 根据 LightSetting 实时更新灯光
 
 ### 音乐播放器
 
-- [ ] 显示当前播放歌曲信息
-- [ ] 播放列表展示
-- [ ] 播放控制（上一首/下一首/暂停）
-- [ ] 进度条
+- [x] 显示当前播放歌曲信息
+- [x] 播放列表展示
+- [ ] 播放控制（上一首/下一首/暂停）（待扩展）
+- [ ] 进度条（待扩展）
 
 ### 串词展示
 
-- [ ] 显示 Agent 生成的串词
-- [ ] 打字机效果展示
-- [ ] TTS 播放按钮（可选）
+- [x] 显示 Agent 生成的串词
+- [x] 打字机效果展示
+- [ ] TTS 播放按钮（待扩展）
 
 ### Agent 思维链展示
 
-- [ ] 显示 Agent 的推理过程
-- [ ] 展示调用了哪些工具
-- [ ] 展示每个工具的输入输出
-- [ ] 折叠/展开功能
+- [x] 显示 Agent 的推理过程
+- [x] 展示调用了哪些工具
+- [x] 展示每个工具的输入输出
+- [x] 终端风格界面 + 打字机效果
 
 ### API 集成
 
-- [ ] 封装 API 调用服务
-- [ ] 实现状态管理（Pinia）
-- [ ] 处理加载状态和错误状态
-- [ ] SSE 订阅（`/api/vibe/events`，可选）
+- [x] 封装 API 调用服务
+- [x] 实现状态管理（Pinia）
+- [x] 处理加载状态和错误状态
+- [x] SSE 订阅（流式分析）
 
 ### 演示模式
 
-- [ ] 实现一键演示功能
-- [ ] 自动切换不同场景
-- [ ] 展示"环境变 → Vibe 变"的效果
+- [x] 实现一键演示功能
+- [x] 场景选择弹窗（预设 + AI 生成）
+- [x] 展示"环境变 → Vibe 变"的效果
 
 ## 相关文件
 
@@ -132,12 +131,22 @@ vibe-drive-frontend/
 
 ## 完成标准
 
-- [ ] UI 界面完整，适配车载横屏
-- [ ] 氛围灯动效流畅（≥ 30 FPS）
-- [ ] Agent 思维链可视化清晰
-- [ ] 演示模式可正常运行
-- [ ] 代码已提交到 Git
+- [x] UI 界面完整，适配车载横屏
+- [x] 氛围灯动效流畅
+- [x] Agent 思维链可视化清晰
+- [x] 演示模式可正常运行
+- [x] 代码已提交到 Git
+
+## 扩展功能（已完成）
+
+- [x] 香氛系统（ScentDisplay 组件）
+- [x] 按摩系统（MassageDisplay 组件）
+- [x] 环境生成智能体（AI 根据描述生成环境）
+- [x] 场景选择弹窗（预设场景 + AI 生成）
 
 ## 问题与笔记
 
-（开发过程中遇到的问题和解决方案记录在这里）
+- TresJS 3D 组件配置复杂，改用 CSS 动效实现氛围可视化
+- SSE 事件类型需要正确解析 `event:` 行
+- 后端返回小写枚举值，前端需要大小写转换
+- Token 事件字段名为 `content`（非 `text`）
