--- a/docs/explore/探索文档-主智能体设计.md
+++ b/docs/explore/探索文档-主智能体设计.md
@@ -27,10 +27,10 @@
 
 ## 待探索话题
 
-- [ ] 话题1：主智能体与氛围智能体的关系
-- [ ] 话题2：主智能体的能力边界
-- [ ] 话题3：对话交互设计
-- [ ] 话题4：演示场景设计
+- [x] 话题1：主智能体与氛围智能体的关系
+- [x] 话题2：主智能体的能力边界
+- [x] 话题3：对话交互设计
+- [x] 话题4：演示场景设计
 
 ---
 
@@ -65,8 +65,49 @@
 
 | 智能体 | 职责 | 工具 |
 |--------|------|------|
-| 主智能体 | 对话、意图理解、任务分发 | ？ |
-| 氛围智能体 | 氛围编排 | Music, Light, Scent, Massage, Narrative |
+| 主智能体 | 对话、意图理解、直接控制 | 全部工具 + 管理工具 |
+| 氛围智能体 | 自动氛围编排 | Music, Light, Scent, Massage, Narrative |
+
+**主智能体工具清单**：
+
+```
+主智能体工具：
+├── 继承氛围智能体工具（可直接干预）
+│   ├── MusicTool (搜索/播放)
+│   ├── MusicSeedTool
+│   ├── LightTool
+│   ├── ScentTool
+│   ├── MassageTool
+│   └── NarrativeTool
+│
+└── 额外管理工具
+    ├── callVibeAgent (调用氛围智能体自动编排)
+    ├── getEnvironment (获取环境数据)
+    └── setEnvironment (模拟环境)
+```
+
+**设计理由**：用户可能对自动编排结果不满意，主智能体可直接修改，无需重新走氛围智能体。
+
+#### 1.2.1 say 工具（语音输出控制）
+
+**问题**：ReAct 架构下，AI 输出很多中间内容，如果都转语音会很吵。
+
+**解决方案**：只有调用 `say` 工具时才转语音。
+
+```
+AI 输出：
+├── 思考过程 → 只显示文字，不转语音
+├── 工具调用 → 只显示文字，不转语音
+└── say("你好") → 转语音播放
+```
+
+**say 工具**：
+```java
+@Tool("对用户说话，会转为语音播放")
+public String say(String text) {
+    return text; // 前端收到后调用 TTS
+}
+```
 
 #### 1.3 主智能体的双重身份
 
@@ -133,26 +174,91 @@
 
 ---
 
-### 话题2：实现计划
+### 话题2：主智能体的能力边界
 
-#### 2.1 架构图
+**讨论日期**：2025-12-26
+
+#### 2.1 能力范围
+
+| 能力 | 可以 | 不可以 |
+|------|------|--------|
+| 氛围控制 | ✅ 调用工具 | |
+| 闲聊 | ✅ 聊天 | |
+| 技术架构 | ✅ 解释项目 | |
+| 文本操作 | | ❌ 写文档/代码 |
+| 文件操作 | | ❌ 读写文件 |
+| 外部请求 | | ❌ 联网/API |
+
+**原则**：只能"说"和"控制工具"，不能"写"。
+
+---
+
+### 话题3：对话交互设计
+
+**讨论日期**：2025-12-26
+
+#### 3.1 ReAct 过程中用户打断
+
+**问题**：ReAct 模式执行时间长，用户可能在中间说话。
+
+**解决方案**：Spring AOP 拦截工具调用
+
+```java
+@Aspect
+@Component
+public class ToolInterceptor {
+
+    @Autowired
+    private MessageQueue messageQueue;
+
+    @Around("@annotation(dev.langchain4j.agent.tool.Tool)")
+    public Object checkBeforeToolExecution(ProceedingJoinPoint joinPoint) throws Throwable {
+        // 每次工具调用前检查
+        if (messageQueue.hasUserMessage()) {
+            throw new UserInterruptException("用户有新消息");
+        }
+        return joinPoint.proceed();
+    }
+}
+```
+
+**处理逻辑**：
+- 每次工具调用前检查消息队列
+- 有新消息 → 抛出中断异常
+- 上层捕获异常，处理新消息
+
+---
+
+### 话题4：演示场景设计
+
+**讨论日期**：2025-12-26
+
+#### 4.1 演示场景
+
+| 场景 | 用户说 | 主智能体行为 |
+|------|--------|-------------|
+| 编排环境 | "模拟夜间高速" | 调用 setEnvironment |
+| 编排氛围 | "帮我放松一下" | 调用 callVibeAgent |
+| 直接控制 | "灯光调暗" | 调用 LightTool |
+| 项目介绍 | "这个项目怎么实现的" | 调用 getProjectIntro |
+
+#### 4.2 项目介绍文档
+
+**方案**：在 resources 放置简单文档
 
 ```
-┌─────────────┐     ┌─────────────┐     ┌─────────────┐
-│   前端       │     │  Whisper    │     │  Java 后端  │
-│  (Vue)      │     │  (Docker)   │     │             │
-│             │     │             │     │             │
-│ 录音按钮 ────┼────▶│ ASR 转写 ───┼────▶│ 主智能体    │
-│             │     │  :9000      │     │             │
-└─────────────┘     └─────────────┘     └─────────────┘
+resources/
+└── docs/
+    └── project-intro.md  ← README 内容
 ```
 
-#### 2.2 待实现
-
-- [ ] Docker 部署 Whisper 服务
-- [ ] 前端录音组件
-- [ ] 前端调用 Whisper API
-- [ ] 集成到对话流程
+**工具**：
+```java
+@Tool("获取项目介绍文档")
+public String getProjectIntro() {
+    return resourceLoader.load("docs/project-intro.md");
+}
+```
 
 ---
 
