docs: 更新主智能体响应优化探索文档

--- a/docs/explore/探索文档-主智能体响应优化.md
+++ b/docs/explore/探索文档-主智能体响应优化.md
@@ -104,7 +104,7 @@
 
 ---
 
-### 方案 4：混合模式（推荐）
+### 方案 4：混合模式（推荐） ✅ 已选定
 
 **思路**：结合方案 2 和方案 3
 
@@ -116,13 +116,141 @@
   2. callVibeAgent("放松氛围", async=true) ← 异步委派
     ↓
 用户立即听到回复
-氛围在后台编排，完成后推送结果
+氛围在后台编排，完成后通知主智能体
 ```
 
 **核心改动**：
 1. Prompt 强调"先说后做"
 2. `callVibeAgent` 改为异步执行
 3. 主智能体只保留 `say` + `callVibeAgent` + 简单查询工具
+
+---
+
+## 方案 4 详细设计
+
+### 整体架构
+
+```
+┌─────────────────────────────────────────────────────────┐
+│                    主智能体                              │
+│                                                         │
+│  工具：                                                  │
+│  - say()           对用户说话                            │
+│  - callVibeAgent() 异步启动氛围智能体                    │
+│  - resetVibe()     终止当前氛围任务                      │
+│  - getEnvironment()                                     │
+│  - ...                                                  │
+└─────────────────────────────────────────────────────────┘
+         │                              ↑
+         │ 异步启动                     │ 完成/失败消息
+         ↓                              │
+┌─────────────────────────────────────────────────────────┐
+│                 氛围任务管理器                            │
+│                                                         │
+│  - currentTask: 当前运行的氛围任务（只能有一个）          │
+│  - messageQueue: 完成/失败消息队列                       │
+│                                                         │
+│  方法：                                                  │
+│  - startTask()  启动新任务（自动终止旧任务）              │
+│  - cancelTask() 终止当前任务                             │
+│  - pollMessages() 获取队列中的消息                       │
+└─────────────────────────────────────────────────────────┘
+         │
+         │ 执行
+         ↓
+┌─────────────────────────────────────────────────────────┐
+│                   氛围智能体                             │
+└─────────────────────────────────────────────────────────┘
+```
+
+### 消息队列机制
+
+氛围智能体完成后，结果进入消息队列，等待主智能体处理。
+
+```
+主智能体处理流程：
+────────────────
+1. 收到用户消息
+2. 检查消息队列（氛围完成/失败消息）
+3. 将队列消息 + 用户消息一起给 LLM 处理
+4. LLM 生成回复，可能调用工具
+5. 返回结果
+```
+
+**消息类型**：
+- `VIBE_SUCCESS`: 氛围编排成功，包含 AmbiencePlan
+- `VIBE_FAILED`: 氛围编排失败，包含错误信息
+
+### 并发场景处理
+
+**场景 1：用户没有新对话**
+```
+主智能体: say("正在编排") → 静默
+                              ↓
+                        氛围智能体完成，消息入队
+                              ↓
+                        （等待用户下次对话时处理）
+```
+
+**场景 2：用户发起新对话**
+```
+主智能体: say("正在编排") → 静默
+                              ↓
+用户: "现在什么天气？"
+                              ↓
+主智能体: 检查队列 + 处理用户问题
+         "今天晴天，对了氛围编排好了"
+```
+
+**场景 3：用户换风格（只能有一个氛围运行）**
+```
+用户: "帮我放松" → 启动氛围 A
+用户: "换个风格" → 终止 A，启动氛围 B
+```
+
+**场景 4：用户取消**
+```
+用户: "帮我放松" → 启动氛围
+用户: "算了不要了"
+         ↓
+主智能体: resetVibe() → 终止当前氛围任务
+```
+
+### 实时推送机制
+
+氛围智能体执行过程中，工具调用**实时推送**给前端，而不是等完成后再推送。
+
+```
+氛围智能体执行流程：
+────────────────────
+1. setLight() → 实时推送 tool_start/tool_end → 前端立即应用灯光
+2. setScent() → 实时推送 tool_start/tool_end → 前端立即应用香氛
+3. batchPlayMusic() → 实时推送 → 前端立即播放音乐
+4. generateNarrative() → 实时推送 → 前端立即播报 TTS
+5. 全部完成 → 完成消息入队 → 等待主智能体处理
+```
+
+**推送通道**：通过 SseEventPublisher 按 sessionId 推送
+
+```
+┌─────────────────┐
+│   氛围智能体     │
+│                 │
+│  工具执行 ──────────→ SseEventPublisher.publish(sessionId, event)
+│                 │                    │
+└─────────────────┘                    ↓
+                              ┌─────────────────┐
+                              │     前端        │
+                              │                 │
+                              │  实时接收并应用  │
+                              └─────────────────┘
+```
+
+**事件类型**：
+- `vibe_tool_start`: 氛围工具开始执行
+- `vibe_tool_end`: 氛围工具执行完成（包含结果）
+- `vibe_complete`: 氛围编排全部完成
+- `vibe_error`: 氛围编排失败
 
 ---
 
@@ -170,7 +298,10 @@
 
 | 日期 | 决策 | 原因 |
 |------|------|------|
-| 2024-12-27 | 待定 | 需要实验验证 |
+| 2024-12-27 | 选定方案 4（混合模式） | 兼顾响应速度和灵活性 |
+| 2024-12-27 | 异步 callVibeAgent + 消息队列 | 主智能体立即响应，氛围后台执行 |
+| 2024-12-27 | 只允许一个氛围任务运行 | 避免冲突，新任务自动终止旧任务 |
+| 2024-12-27 | 新增 resetVibe 工具 | 支持用户取消氛围任务 |
 
 ---
 
