docs: 记录 TTS 延迟优化探索和决策
- tool_start 触发 TTS + 流式播放已实现
- LangChain4j 流式工具参数调研结果
- 决策：保持 say 工具，当前延迟可接受

--- a/docs/explore/探索文档-主智能体响应优化.md
+++ b/docs/explore/探索文档-主智能体响应优化.md
@@ -305,7 +305,96 @@
 
 ---
 
+## TTS 延迟优化探索（2024-12-27）
+
+### 问题背景
+
+用户发出指令后，到听到 AI 回复之间延迟较大。
+
+**延迟来源分析**：
+1. LLM 推理时间（TTFT）- 无法优化
+2. LLM 生成 say 工具参数 - 需要完整生成后才触发
+3. TTS 生成音频 - 可以流式优化
+4. 音频播放 - 可以流式优化
+
+### 已实现的优化
+
+#### 优化 1：tool_start 触发 TTS
+
+**改动**：say 工具开始时（tool_start）就触发 TTS，不等 tool_end
+
+**效果**：减少约 500ms 延迟
+
+#### 优化 2：流式 TTS 播放
+
+**改动**：使用 MediaSource API 实现边收边播
+
+**效果**：首字延迟从 1.5-3s 降至 100-300ms
+
+### 进一步优化探索：流式 say 工具
+
+**目标**：LLM 边生成 say 参数，边发送给 TTS 播放
+
+**调研结果**（LangChain4j）：
+
+| 需求 | 是否支持 | 说明 |
+|------|----------|------|
+| TokenStream 流式工具参数 | ❌ | beforeToolExecution 在参数完整后才触发 |
+| onPartialToolCall 回调 | ❌ | 官方暂不支持（GitHub Issue #3712） |
+| 底层 StreamingChatModel | ✅ | 可访问原始流，但需绕过 AiServices |
+
+**底层 API 支持**：OpenAI/DeepSeek API 原生支持流式返回工具参数
+
+```json
+{"function_call": {"name": "say", "arguments": "{\"text\": \"你"}}
+{"function_call": {"name": "say", "arguments": "好"}}
+...
+```
+
+**实现方案**：
+1. 跳过 AiServices，直接使用 StreamingChatModel
+2. 自定义 StreamingChatResponseHandler 解析原始流
+3. 检测 say 工具参数 delta，流式推送给前端
+
+**权衡**：
+- 改动成本高（需重写对话逻辑，失去 AiServices 便利）
+- 收益有限（~300ms 进一步优化）
+
+### 替代方案评估
+
+| 方案 | 可行性 | 风险 |
+|------|--------|------|
+| `<say>...</say>` 标签 | 中 | LLM 可能不遵循（~85-90%） |
+| 所有输出都播放 | 高 | 会播放"思考内容" |
+| 第一句话播放 | 高 | 假设第一句是回复 |
+| 保持 say 工具 | 高 | 延迟已优化，可接受 |
+
+### 决策
+
+**选择**：保持 say 工具，接受当前延迟
+
+**原因**：
+1. 当前优化后延迟已可接受（~300ms 首字）
+2. 流式 say 改动成本高，收益有限
+3. `<say>` 标签方案可靠性不足
+
+---
+
+## 决策记录
+
+| 日期 | 决策 | 原因 |
+|------|------|------|
+| 2024-12-27 | 选定方案 4（混合模式） | 兼顾响应速度和灵活性 |
+| 2024-12-27 | 异步 callVibeAgent + 消息队列 | 主智能体立即响应，氛围后台执行 |
+| 2024-12-27 | 只允许一个氛围任务运行 | 避免冲突，新任务自动终止旧任务 |
+| 2024-12-27 | 新增 resetVibe 工具 | 支持用户取消氛围任务 |
+| 2024-12-27 | TTS tool_start 触发 + 流式播放 | 降低首字延迟 |
+| 2024-12-27 | 保持 say 工具，不做流式参数 | 改动成本高，收益有限 |
+
+---
+
 ## 参考
 
 - [探索文档-主智能体设计.md](./探索文档-主智能体设计.md)
 - [探索文档-Agent优化.md](./探索文档-Agent优化.md)
+- [LangChain4j Issue #3712](https://github.com/langchain4j/langchain4j/issues/3712) - 流式工具参数需求
