docs: 修正 LangChain4j API 说明，移除错误的 Issue 引用

--- a/docs/explore/探索文档-主智能体响应优化.md
+++ b/docs/explore/探索文档-主智能体响应优化.md
@@ -340,7 +340,7 @@
 | 需求 | 是否支持 | 说明 |
 |------|----------|------|
 | TokenStream 流式工具参数 | ❌ | beforeToolExecution 在参数完整后才触发 |
-| onPartialToolCall 回调 | ❌ | 官方暂不支持（GitHub Issue #3712） |
+| 流式工具参数回调 | ❌ | TokenStream 无此回调，需用底层 API |
 | 底层 StreamingChatModel | ✅ | 可访问原始流，但需绕过 AiServices |
 
 **底层 API 支持**：OpenAI/DeepSeek API 原生支持流式返回工具参数
@@ -397,4 +397,8 @@
 
 - [探索文档-主智能体设计.md](./探索文档-主智能体设计.md)
 - [探索文档-Agent优化.md](./探索文档-Agent优化.md)
-- [LangChain4j Issue #3712](https://github.com/langchain4j/langchain4j/issues/3712) - 流式工具参数需求
+
+### LangChain4j API 说明
+
+- **TokenStream**（高级 API）：`beforeToolExecution` / `onToolExecuted` - 工具执行前后回调
+- **StreamingChatResponseHandler**（低级 API）：可访问原始流，需自行解析工具参数 delta
